<resources>
    <string name="app_name">LabLog</string>
    <string name="summary_cards_description">List of summary cards</string>
    <string name="logo_image_description">LabLog logo image</string>
    <string name="search_image_description">search icon</string>
    <string name="add_image_description">add icon</string>
    <string name="settings_image_description">settings icon</string>
    <string name="back_button_description">back icon</string>
    <string name="latest_entries">Latest entries</string>
    <string name="entry_text">pH | 9.2</string>
    <string name="saveButton">Submit &amp; Close</string>
    <string name="new_entry">New entry</string>
    <string name="timestamp">2024–08–30T14:37:57+00:00</string>
    <string name="add_key">+ Add Key</string>
    <string name="payloadText">Payload:</string>
    <string name="latest_entries_card">Latest entries</string>
    <string name="recent_keys">Select more keys:</string>
    <string name="new_key">+ New Key</string>
    <string name="select_type_for_this_key">Select type for this key:</string>
    <string name="save_key">Save Key</string>
    <string name="give_the_new_key_a_name">Give the new key a name:</string>
    <string name="key_name_hint">hint: value, picture, validity, id, description, unit</string>
    <string name="timestamp_text">Timestamp:</string>
    <string name="takepicture">takePicture</string>
    <string name="captured_image">captured Image</string>
    <string name="timestampText">Timestamp</string>
    <string name="save">Save</string>
    <string name="payloadimage">payloadImage</string>
    <string name="last_entry">Last entry</string>
    <string name="recent_entries">Recent entries</string>
    <string name="load_all">Load all …</string>
    <string name="search_icon">search icon</string>
    <string name="search_hint">hint: keys, values, anything…</string>
    <string name="date_icon">date icon</string>
    <string name="settings_options">settings options</string>
    <string name="mqtt_settings_scroll">mqtt settings scroll</string>
    <string name="mqtt_communication">MQTT Communication</string>
    <string name="enable_mqtt_communication">Enable MQTT Communication</string>
    <string name="broker_address">Broker address</string>
    <string name="topic">Topic</string>
    <string name="send_icon">send icon</string>
    <string name="welcome_text">Welcome to Lablog. Press the \'Plus\' button in the bottom to create your first data entry. Your entries will show up here.</string>
    <string name="import_export_data">Import / Export Data</string>
    <string name="AboutContentString">
<b>Source Code:</b> https://github.com/jakobkreft/LabLog
\n\n
<b>Feedback:</b> Please share your feedback here: https://github.com/jakobkreft/LabLog/issues/new/choose
\n\n
Thank you!
\n\n
LabLog is a digital laboratory notebook designed to replace traditional paper notebooks in lab environments. It allows lab workers to easily record and manage sensor data, observations, and procedures, with automatic timestamping for each entry. LabLog supports both text and image-based data entries and integrates seamlessly with IoT sensors via MQTT for secure data storage. You have complete flexibility in how you use it, as you can create your own custom keys. <b>Each entry consists of key-value pairs that you define.</b>
\n\n
LabLog is not just for lab use! <b>Individuals can also use it</b> and take advantage of its versatile logging capabilities for personal tasks. You can set your own custom keys and values, making it perfect for various use cases like fitness tracking, journaling, habit logging, or any other kind of data logging you need.
\n\n
<b>Features:</b>\n
- <b>Automatic Timestamping</b>: Every entry is automatically timestamped.\n
- <b>Text and Image Support</b>: Log both numeric and textual data, as well as images.\n
- <b>IoT Integration</b>: Easily integrate with IoT sensors using the MQTT protocol.\n
- <b>Data Organization</b>: Entries are searchable and categorized for easy retrieval.\n
- <b>Import/Export</b>: Backup and restore your data with JSON file import/export.\n
\n\n
<b>License:</b> This project is licensed under the GPL-3.0-or-later. See https://github.com/jakobkreft/LabLog/blob/master/LICENSE for details.
\n\n
Developed by Jakob Kreft.
</string>

    <string-array name="key_type_options">
        <item>No Type</item>
        <item>String</item>
        <item>Boolean</item>
        <item>Integer</item>
        <item>Float</item>
        <item>Image</item>
    </string-array>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>