<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/footer"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#00000000"
            android:contentDescription="@string/search_image_description"
            android:scaleType="fitCenter"
            android:scaleX="1"
            android:scaleY="1"
            app:srcCompat="@drawable/ic_search" />

        <ImageButton
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#00000000"
            android:contentDescription="@string/add_image_description"
            android:scaleType="fitCenter"
            android:scaleX="1.1"
            android:scaleY="1.1"
            app:srcCompat="@drawable/ic_plus" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#00000000"
            android:contentDescription="@string/settings_image_description"
            android:scaleType="fitCenter"
            android:scaleX="1"
            android:scaleY="1"
            app:srcCompat="@drawable/ic_settings" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
