<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!-- removed from above, because it was not used xmlns:tools="http://schemas.android.com/tools" -->
    <androidx.cardview.widget.CardView
        android:id="@+id/latestEntriesCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/white"
        app:cardBackgroundColor="#262626"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Inside the CardView, add a LinearLayout or ConstraintLayout to hold the entries -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/keyNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:paddingEnd="70dp"
                android:text="@string/latest_entries_card"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageButton
                android:id="@+id/removeButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:backgroundTint="#00000000"
                android:contentDescription="removeButton"
                android:scaleType="fitCenter"
                android:scaleX="0.7"
                android:scaleY="0.7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_remove"
                app:tint="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingBottom="16dp"
                app:layout_constraintTop_toBottomOf="@+id/keyNameText">

                <!-- Add TextViews or other elements here for each entry -->
                <!-- Example of a TextView with rounded corners -->

                <TextView
                    android:id="@+id/textValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_background"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="10dp"
                    android:text="@string/entry_text"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="payload value"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#6D6D6D" />

                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="CheckBox"
                    android:textColor="@color/white" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#22555555"
                    android:contentDescription="@string/takepicture"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_camera" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
