<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SearchActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/dateLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foregroundGravity="center"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/startDateButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/entries_rounded_background"
                        android:text="start date"
                        android:textColor="@color/save_button"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toStartOf="@+id/imageView3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/endDateButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/entries_rounded_background"
                        android:text="now"
                        android:textColor="@color/save_button"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView3"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="30dp"
                        android:layout_height="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/endDateButton"
                        app:layout_constraintStart_toEndOf="@+id/startDateButton"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_timeline_middle" />

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/endDateButton" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageButton
                    android:id="@+id/dateButton"
                    android:layout_width="50dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="#00000000"
                    android:contentDescription="@string/date_icon"
                    android:scaleType="fitCenter"
                    app:layout_constraintEnd_toStartOf="@+id/textInputLayout2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_date"
                    app:tint="#FFFFFF" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="#4A6B6B6B"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="40dp"
                    app:boxCornerRadiusBottomStart="40dp"
                    app:boxCornerRadiusTopEnd="40dp"
                    app:boxCornerRadiusTopStart="40dp"
                    app:boxStrokeColor="#FFFFFF"
                    app:boxStrokeWidth="2dp"
                    app:hintAnimationEnabled="false"
                    app:layout_constraintEnd_toStartOf="@+id/searchButton"
                    app:layout_constraintStart_toEndOf="@+id/dateButton"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/searchInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/search_hint" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/searchButton"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="#00000000"
                    android:contentDescription="@string/search_icon"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_search"
                    app:tint="#FFFFFF" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/searchResultLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>